--- a/src/app/components/legal-notice-page/legal-notice-page.component.html
+++ b/src/app/components/legal-notice-page/legal-notice-page.component.html
@@ -17,9 +17,7 @@
 
         <div class="flex flex-col gap-4">
             <h2 class="text-4xl font-bold text-purple1">Contact:</h2>
-            <p>Email: [Dein email]
-            </p>
-
+            <p>Email: [Dein email]</p>
         </div>
 
     </div>
