--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -1,5 +1,4 @@
 <section
-
   class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)">
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
@@ -18,12 +17,9 @@
       <p class="flex text-3xl font-bold w-fit mr-[24px]">Noah Braun</p>
 
 
-      <img
-        (click)="openEditProfileOverlay()"
-        class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px] gap-[0px] transition-all ease-out duration-[100ms]"
-        src="/assets/icons/edit2.svg"
-        alt=""
-      />
+      <img (click)="openEditProfileOverlay()"
+        class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px] gap-[0px] transition-all ease-out"
+        src="/assets/icons/edit2.svg" alt="" />
 
       <div
         class="p-[1%] size-9 bg-primary rounded-[50%] cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9] xs:hidden">
