--- a/src/app/components/landing-page/register/register.component.html
+++ b/src/app/components/landing-page/register/register.component.html
@@ -16,7 +16,96 @@
       DABubble-Konto.
     </p>
 
-    <form class="space-y-4">
+    <!-- -------- -->
+    <form #registerForm="ngForm" (ngSubmit)="registerUser()" class="space-y-4">
+      <div class="relative">
+        <img
+          src="assets/imgs/icons/person_filled.svg"
+          alt="User Icon"
+          class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2"
+        />
+        <input
+          type="text"
+          [(ngModel)]="user.firstName"
+          name="firstName"
+          placeholder="Vorname"
+          class="w-full py-2 pl-12 pr-4 text-black transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:border-purple2 focus:ring-2 focus:ring-purple2 focus:outline-none"
+        />
+
+        <!--  -->
+      </div>
+
+      <div class="relative">
+        <img
+          src="assets/imgs/icons/person_filled.svg"
+          alt="User Icon"
+          class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2"
+        />
+        <input
+          type="text"
+          [(ngModel)]="user.lastName"
+          name="lastName"
+          placeholder="Nachname"
+          class="w-full py-2 pl-12 pr-4 text-black transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:border-purple2 focus:ring-2 focus:ring-purple2 focus:outline-none"
+        />
+
+        <!--  -->
+      </div>
+
+      <div class="relative">
+        <img
+          src="assets/imgs/icons/mail.svg"
+          alt="Mail Icon"
+          class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2"
+        />
+        <input
+          type="email"
+          name="email"
+          [(ngModel)]="user.email"
+          placeholder="beispielname@email.com"
+          class="w-full py-2 pl-12 pr-4 text-black transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:border-purple2 focus:ring-2 focus:ring-purple2 focus:outline-none"
+        />
+      </div>
+
+      <div class="relative">
+        <img
+          src="assets/icons/cake.svg"
+          alt="Birthday Icon"
+          class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2"
+        />
+        <input
+          type="date"
+          name="birthDate"
+          [(ngModel)]="user.birthDate"
+          placeholder="Geburtsdatum"
+          class="w-full py-2 pl-12 pr-4 text-black transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:border-purple2 focus:ring-2 focus:ring-purple2 focus:outline-none"
+        />
+      </div>
+
+      <div class="relative">
+        <img
+          src="assets/imgs/icons/lock.svg"
+          alt="Lock Icon"
+          class="absolute w-5 h-5 transform -translate-y-1/2 left-4 top-1/2"
+        />
+        <input
+          type="password"
+          name="password"
+          [(ngModel)]="password"
+          placeholder="Password"
+          class="w-full py-2 pl-12 pr-4 text-black transition duration-200 border border-white rounded-full bg-primary input-fancy focus:bg-primary focus:border-purple2 focus:ring-2 focus:ring-purple2 focus:outline-none"
+        />
+      </div>
+
+      <button
+        type="submit"
+        class="w-full py-2 font-semibold text-center text-white transition duration-200 rounded-full bg-purple1 hover:bg-purple3"
+      >
+        Weiter
+      </button>
+    </form>
+
+    <!--  <form class="space-y-4">
       <div class="relative">
         <img
           src="assets/imgs/icons/person_filled.svg"
@@ -60,9 +149,8 @@
         type="submit"
         class="w-full py-2 font-semibold text-center text-white transition duration-200 rounded-full bg-purple1 hover:bg-purple3"
       >
-        Weiter
+        Weiterx
       </button>
-    </form>
+    </form> -->
   </div>
-
- 
+</div>
