--- a/src/app/components/navigation/channels/channels.component.html
+++ b/src/app/components/navigation/channels/channels.component.html
@@ -17,7 +17,7 @@
     <ul id="dropList" class="flex flex-col w-full gap-2 text-lg">
 
         @for (channel of channelService.channels; track $index) {
-                <li (click)="channelNavService.openChannel(); channelService.openChannel(channel.id)"
+                <li (click)="channelNavService.openChannel(); channelService.openChannel(channel.id); messageService.getMessages(channel.id)"
                     class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3">
                     <span class="font-bold">#</span> {{channel.name}}
                 </li>
