--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -14,6 +14,7 @@
                   <div class=" p-[15px] rounded-[30px]" [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]': fromCurrentUser(threadHeadMessage.user.name), 'bg-primary rounded-ss-none': !fromCurrentUser(threadHeadMessage.user.name) }">
                       <span>{{ threadHeadMessage.content }}</span>
                   </div>
+                  
               </div>
           </div>
           <div class="flex items-center text-[18px] my-[10px] px-4">
@@ -27,6 +28,8 @@
           </div>
       }
       <!-- @if (channelService.messages.length > 0) { -->
+
+      <!-- Messages  -->
 
           @for (message of messages; track message; let i = $index) {
               @if (newDay) {
